<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@drawable/shape_white_rounded_medium"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/lbl_save_your_recording"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtPodCastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/lbl_please_enter_podcast_name"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:inputType="text"
        android:textSize="15sp"
        android:autofillHints="name">

    </EditText>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:text="@string/lbl_save"
        android:textAllCaps="false">

    </Button>
</androidx.appcompat.widget.LinearLayoutCompat>