<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/white_rounded_background"
    android:orientation="vertical"
    android:padding="30dp">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/rcvPodCasts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/row_podcast"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <ImageView
            android:id="@+id/imgMicPlaceHolder"
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/icon_microphone_placeholder"
            app:tint="@color/mic_icon_color"
            android:contentDescription="@string/app_name" />
    </FrameLayout>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lytRecordAudio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgRecord"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle_light_theme_background"
                android:padding="12dp"
                android:src="@drawable/icon_mic"
                app:tint="@color/white"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/lbl_record"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lytImportAudio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle_light_theme_background"
                android:padding="12dp"
                android:src="@drawable/icon_files"
                app:tint="@color/white"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/lbl_import_files"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>